--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.25.9",
+    "daisyui": "^4.12.14",
     "tailwindcss": "^3.4.14"
   }
 }
